[tool.poetry]
name = "cell-detection"
version = "0.1.0"
description = "This repo is used for detecting cells in 3d images"
authors = ["albert schulz <albert.schulz@bdr.de>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "cell_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
pyimagej = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
