[tool.poetry]
name = "cell_detection"
version = "0.1.0"
description = "This repo is used for detecting cells in 3d images"
authors = ["albert schulz <albert.schulz@bdr.de>"]
license = "GPL3"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyimagej = "^1.3.2"
h5py = "^3.7.0"
matplotlib = "^3.6.2"
pyqt5 = "^5.15.7"
napari = "^0.4.17"
hydra-core = "^1.3.1"
aim = "^3.15.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
