[tool.poetry]
name = "cell_detection"
version = "0.1.0"
description = "This repo is used for detecting cells in 3d images"
authors = ["albert schulz <albert.schulz@bdr.de>"]
license = "GPL3"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyimagej = "^1.3.2"
h5py = "^3.7.0"
matplotlib = "^3.6.2"
napari = "^0.4.17"
hydra-core = "^1.3.1"
aim = "^3.15.2"
jupyter = "^1.0.0"
pyqt5 = "^5.15.9"
opencv-contrib-python-headless = "^4.7.0.68"
tqdm = "^4.64.1"
cython = {version = "^3.0.0a11", allow-prereleases = true}
setuptools = "^67.3.2"
plotly = "^5.13.0"
pip = "^23.0.1"
wheel = "^0.38.4"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit-hooks = "^4.4.0"
pytest = "^7.2.1"
pre-commit = "^3.0.0"
pathspec = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules"
minversion = "7.2.1"
testpaths = ["tests", "src"]

[tool.black]
exclude = '''
/(
       \.eggs         # exclude a few common directories in the
     | \.git          # root of the project
     | \.hg
     | \.mypy_cache
     | \.tox
     | _build
     | buck-out
     | build
     | dist
)/
'''
include = '\.pyi?$'
line-length = 88

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
skip_gitignore = true
